syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "./minimaltest";

package minimaltest;

service MinimalTest {

	rpc PutPair(PutPairRequest) returns (PairResponse) {
	    option (google.api.http) = {
	    	post: "/api/putpair"
			body: "*"
	    };
	}
	rpc GetPair(GetPairRequest) returns (PairResponse) {
	    option (google.api.http) = {
	    	post: "/api/getpair"
			body: "*"
	    };
	}

}

message Pair {
	int32 id = 1;
	string value = 2;
}

message PutPairRequest {
	Pair pair = 1;
}

message GetPairRequest {
	int32 id = 1;
}

message PairResponse {
	Pair pair = 1;
	string error_message = 2;
}

